--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -1,6 +1,6 @@
 @use "../../../node_modules/bootstrap/scss/bootstrap.scss";
 
 body {
-  background-color: #363636;
+  background-color: #1b1b1b;
   color: white;
 }
